feat: 로그인 에러 및 api에러 수정
